# iShareServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aps_development.cer  cmake_install.cmake  generate_proto.sh  hardcopy.0  iShare.err  iShare.grpc.pb.cc  iShare.grpc.pb.h  iShare.pb.cc  iShare.pb.h  iShare.proto  iSharePushCert.pem  iSharePushKey.pem  iShare_server.cc  iShare_server.h  mysql_pool.h  tools.cc
MMGAPN/: MMGAPNSConnection.cpp  MMGAPNSConnection.d  MMGDevice.d  MMGIOSPayload.d  MMGPayload.d  MMGSSLConnection.d  MMGSafariPayload.d  MMGTools.cpp  MMGTools.d  MacGPusher  PushChatCert.pem  PushChatKey.pem  global.hpp  main.cp  main.cpp
Tools/: a.out  bills_transfer.cpp  friends_transfer.cpp  mysql_pool.h
iShare_source/: generate_proto.sh  iShare.grpc.pb.cc  iShare.grpc.pb.h  iShare.pb.cc  iShare.pb.h  iShare.proto  iShare_bill.cc  iShare_config  iShare_log.h  iShare_mail.cc  iShare_mail.h  iShare_request.cc  iShare_server.cc  iShare_server.h  iShare_setting.cc  iShare_synchronism.cc  iShare_tools.cc  iShare_user.cc  mysql_pool.cc  mysql_pool.h  syn.cc
iShare_unitTest/: Makefile
iShare_unitTest/bill/: Makefile  bill.h  bill_unittest  bill_unittest.cc
iShare_unitTest/user/: Makefile  user.h  user_unittest  user_unittest.cc
test_client/: Makefile  greeter_client  greeter_client.cc  greeter_client1  greeter_client2  iShare.grpc.pb.cc  iShare.grpc.pb.h
